@@ -14,7 +14,8 @@
  
 <P ALIGN="RIGHT">
 
-Next<A HREF="index-1.html">Previous</A>
+<A HREF="index-3.html">Next</A>
+<A HREF="index-1.html">Previous</A>
 <A HREF="index.html#toc2">Table of Contents</A>
 </P>
 <H3><A NAME="s2">2. Gameplay</A></H3>
@@ -63,7 +64,8 @@ over, drawing five cards, deciding which ones you want to keep ...
 </UL>
 <P ALIGN="RIGHT">
 
-Next<A HREF="index-1.html">Previous</A>
+<A HREF="index-3.html">Next</A>
+<A HREF="index-1.html">Previous</A>
 <A HREF="index.html#toc2">Table of Contents</A>
 </P>
 <CENTER>
