@@ -21,18 +21,17 @@ PreviousTable of Contents</P>
 <SMALL><I>
 Jochen Tuchbreiter, 
 <A HREF="mailto:whynot@mabi.de">whynot@mabi.de</A></I></SMALL>
-<BR><I><SMALL>v0.2, 09/05/97</SMALL></I><BR>
+<BR><I><SMALL>v0.3, 26/02/98</SMALL></I><BR>
 <P><HR>
-<EM>This is the helpfile of KPoker, a little video poker clone.</EM>
+<EM>This is the helpfile of KPoker, a little video poker clone. It was last
+updated for KPoker version 0.4.1</EM>
 <HR>
 <P>
-<H2><A NAME="toc1">1.</A> <A HREF="index-1.html">General information about KPoker</A></H2>
+<H2><A NAME="toc1">1.</A> <A HREF="index-1.html">Introduction</A></H2>
 
 <UL>
 <LI><A HREF="index-1.html#ss1.1">1.1 What is KPoker ?</A>
 <LI><A HREF="index-1.html#ss1.2">1.2 Where do I get the latest version of KPoker ?</A>
-<LI><A HREF="index-1.html#ss1.3">1.3 How do I contact the author ?</A>
-<LI><A HREF="index-1.html#ss1.4">1.4 Credits</A>
 </UL>
 <P>
 <H2><A NAME="toc2">2.</A> <A HREF="index-2.html">Gameplay</A></H2>
@@ -41,6 +40,13 @@ Jochen Tuchbreiter,
 <LI><A HREF="index-2.html#ss2.1">2.1 How do I play ?</A>
 <LI><A HREF="index-2.html#ss2.2">2.2 What are possible poker hands ?</A>
 <LI><A HREF="index-2.html#ss2.3">2.3 How many bucks do I get for what hand ? </A>
+</UL>
+<P>
+<H2><A NAME="toc3">3.</A> <A HREF="index-3.html">Epilogue</A></H2>
+
+<UL>
+<LI><A HREF="index-3.html#ss3.1">3.1 Authors</A>
+<LI><A HREF="index-3.html#ss3.2">3.2 Copyright</A>
 </UL>
 <P ALIGN="RIGHT">
 
