@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
 <HEAD>
-<TITLE>KPoker help: General information about KPoker</TITLE>
+<TITLE>KPoker help: Introduction</TITLE>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
 <META NAME="keywords" CONTENT="kpoker poker game games cardgame">
 <META NAME="description" CONTENT="Video Poker - a simple poker game">
@@ -17,7 +17,7 @@
 <A HREF="index-2.html">Next</A>
 Previous<A HREF="index.html#toc1">Table of Contents</A>
 </P>
-<H3><A NAME="s1">1. General information about KPoker</A></H3>
+<H3><A NAME="s1">1. Introduction</A></H3>
 
 <H3><A NAME="ss1.1">1.1 What is KPoker ?</A>
 </H3>
@@ -31,25 +31,9 @@ pocket video poker games which are sometimes called "Videopoker" as well.
 <P>The latest version of KPoker is always avaible at
 <UL>
 <LI>The KPoker homepage: 
-<A HREF="http://www.mabi.de/~whynot/kpoker.html">http://www.mabi.de/~whynot/kpoker.html</A></LI>
+<A HREF="http://www.mabi.de/~whynot/kpoker/">http://www.mabi.de/~whynot/kpoker/</A></LI>
 <LI>The KDE homepage: 
 <A HREF="http://www.kde.org">http://www.kde.org</A></LI>
-</UL>
-<H3><A NAME="ss1.3">1.3 How do I contact the author ?</A>
-</H3>
-
-<P>The best way to contact me is EMail: Jochen Tuchbreiter as 
-<A HREF="mailto:whynot@mabi.de">whynot@mabi.de</A><P>I would appreciate any positive or negative feedback concerning this
-game. I am also very open to new suggestions and ideas... :)
-<H3><A NAME="ss1.4">1.4 Credits</A>
-</H3>
-
-<P>Thanks go to:
-<UL>
-<LI>Chris Holmes - for the idea of writing this game and for parts of the visual appearence</LI>
-<LI>John Fitzgibbon - for providing the card images</LI>
-<LI>Nico Schirwing - for drawing the backsides of the cards</LI>
-<LI>The whole KDE development team - for creating such a wonderful desktop environment.</LI>
 </UL>
 <P ALIGN="RIGHT">
 
